@@ -4,6 +4,7 @@ ver 3.2.2
   Fix configure error which --with-gui=xlib,fb option causes. (enbugged at 3.2.1)
   DECALN(ESC#8) resets the screen margins.
   Fix the cursor position in inserting RTL characters after one LTR character.
+  Fix segmentation fault of libvte compatible libyrary with synaptic 0.80.
 
 ver 3.2.1
 * Support framebuffer on OpenBSD.
